--- a/.env.txt
+++ b/.env.txt
@@ -4,4 +4,4 @@ DB_PORT="3306"
 DB_USER="your_mysql_user"
 DB_PASSWORD="your_mysql_password"
 DB_NAME="your_mysql_database"
-
+GROQ_API_KEY="your_groq_api_key"
