--- a/.env.txt
+++ b/.env.txt
@@ -5,3 +5,6 @@ DB_USER="your_mysql_user"
 DB_PASSWORD="your_mysql_password"
 DB_NAME="your_mysql_database"
 GROQ_API_KEY="your_groq_api_key"
+LLM_PROVIDER=ollama
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL_NAME=gemma:7b
