--- a/.env.txt
+++ b/.env.txt
@@ -1,10 +1,12 @@
 # MySQL Database Connection
-DB_HOST="your_mysql_host"
+DB_HOST="localhost"
 DB_PORT="3306"
 DB_USER="your_mysql_user"
 DB_PASSWORD="your_mysql_password"
-DB_NAME="your_mysql_database"
+DB_NAME="devdb"
 #GROQ_API_KEY="your_groq_api_key"
+GROQ_MODEL_NAME=llama3-8b-8192
 LLM_PROVIDER=ollama
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL_NAME=gemma:7b
+#OLLAMA_MODEL_NAME=gemma:7b
+OLLAMA_MODEL_NAME=llama3:8b
